--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,12 @@ table {
     --black: #000000;
 }
 
+#skip {
+	position: absolute;
+	transform: translateY(-200%);
+	transition: transform 0.3s;
+}
+
 /* -----HEADER STYLES----- */
 
 header {
