--- a/styles.css
+++ b/styles.css
@@ -83,5 +83,5 @@ table {
 /* -----HEADER STYLES----- */
 
 header {
-	background: linear-gradient(to bottom, #499BD2 0%, #ffffff 100%)
+	background: linear-gradient(to bottom, #55BCD5 0%, #ffffff 100%)
 }
