--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,13 @@ h2 {
 	font-family: "Molle", serif;
 	font-size: 2rem;
 	text-align: left;
+	padding: 15px 0px 15px 15px;
+}
+
+h3 {
+	font-family: "Molle", serif;
+	font-size: 2rem;
+	text-align: left;
 	padding: 15px 0px 0px 15px;
 }
 
@@ -118,4 +125,32 @@ h2 {
 p {
 	line-height: 25px;
 	padding:  0px 15px;
+}
+
+/* -----SECTION STYLES----- */
+
+#plan {
+	background-color: var(--yellow);
+}
+
+section {
+	background: var(--teal);
+	padding: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	border-radius: 8px;
+	border-color: var(--white);
+}
+
+img {
+	width: 100%;
+	height: 400px;
+	background-size: 100% 100%;
+}
+
+#img-grid {
+	display: grid;
+	gap: 24px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
