--- a/styles.css
+++ b/styles.css
@@ -136,21 +136,26 @@ p {
 section {
 	background: var(--teal);
 	padding: 20px;
-	margin-left: 20px;
-	margin-right: 20px;
 	border-radius: 8px;
 	border-color: var(--white);
 }
 
-img {
-	width: 100%;
-	height: 400px;
-	background-size: 100% 100%;
+section div {
+	display: grid;
+	gap: 24px;
+	border: 1px solid white;
+	border-radius: 8px;
 }
+
+/* -----IMAGE STYLES----- */
 
 #img-grid {
 	display: grid;
 	gap: 24px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+picture {
+	width: 100%;
 }
