--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ h3 {
 	font-size: 2rem;
 	text-align: left;
 	padding: 15px 0px 0px 15px;
+	margin: 20px 0px;
 }
 
 /* -----LINE STYLES----- */
@@ -138,13 +139,25 @@ p {
 	padding: 20px;
 	border-radius: 8px;
 	border-color: var(--white);
-	border: 1px solid white;
+	border: 4px solid white;
+	display: grid;
+	justify-content: center;
+	gap: 20px;
 }
 
 #plan div {
 	display: grid;
 	gap: 24px;
 	border-radius: 8px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+#plan section h4 {
+	font-family: 'Montserrat';
+	font-size: 30px;
+	font-weight: 600;
+	text-align: center;
 }
 
 /* -----IMAGE STYLES----- */
