--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,30 @@ p {
 	text-align: center;
 }
 
+#testimonials section {
+	display: grid;
+	justify-items: center;
+	text-align: center;
+	padding: 0px 64px 10px 64px;
+}
+
+#testimonials section h4 {
+	font-family: 'Montserrat';
+	font-size: 30px;
+	font-weight: 600;
+	text-align: center;
+	margin-top: 10px;
+}
+
+#testimonials section p {
+	font-size: 20px;
+}
+
+#testimonials section q {
+	font-size: 20px;
+	font-style: italic;
+}
+
 /* -----IMAGE STYLES----- */
 
 #img-grid {
