--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,7 @@ p {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	text-align: center;
+	gap: 20px;
 }
 
 #about section h4 {
@@ -208,6 +209,17 @@ p {
 	font-weight: 100;
 }
 
+#contact span {
+	font-family: 'Montserrat';
+	font-size: 20px;
+	font-style: italic;
+	font-weight: 100;
+}
+
+#contact {
+	padding: 32px;
+}
+
 /* -----IMAGE STYLES----- */
 
 #img-grid {
@@ -218,5 +230,17 @@ p {
 }
 
 picture img {
+	width: 100%;
+}
+
+/* -----FORM STYLES----- */
+
+form label {
+	display: inline-block;
+	width: 100%;
+	}
+
+form fieldset {
+	dispaly: grid;
 	width: 100%;
 }
