--- a/styles.css
+++ b/styles.css
@@ -238,9 +238,29 @@ picture img {
 form label {
 	display: inline-block;
 	width: 100%;
+	font-family: 'Montserrat';
+	font-size: 20px;
+	font-weight: 600;
+	margin-bottom: 4px;
 	}
 
 form fieldset {
 	dispaly: grid;
 	width: 100%;
+}
+
+form input {
+	width: 100%;
+	height: 50px;
+	border: 4px solid var(--purple);
+	font-size: 20px;
+	font-family: 'Montserrat';
+	padding: 10px;
+}
+
+form legend {
+	font-family: 'Montserrat';
+	font-size: 20px;
+	font-weight: 600;
+	margin-bottom: 4px;
 }
