--- a/styles.css
+++ b/styles.css
@@ -270,3 +270,13 @@ input[type=submit] {
 	background: var(--purple);
 	color: var(--white);
 }
+
+#destination #travelTime {
+	width: 100%;
+	height: 50px;
+	border: 4px solid var(--purple);
+	font-size: 20px;
+	font-family: 'Montserrat';
+	padding: 10px;
+	margin-bottom: 20px;
+}
