--- a/styles.css
+++ b/styles.css
@@ -272,8 +272,8 @@ input[type=submit] {
 }
 
 #destination {
-	width: 100%;
-	height: 50px;
+	width: 107%;
+	height: 70px;
 	border: 4px solid var(--purple);
 	font-size: 20px;
 	font-family: 'Montserrat';
@@ -282,11 +282,15 @@ input[type=submit] {
 }
 
 #travelTime {
-	width: 100%;
-	height: 50px;
+	width: 107%;
+	height: 70px;
 	border: 4px solid var(--purple);
 	font-size: 20px;
 	font-family: 'Montserrat';
 	padding: 10px;
 	margin-bottom: 20px;
+}
+
+input[type=radio] {
+	width: 50%;
 }
