--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,16 @@ input[type=radio] {
 		text-align: center;
 	}
 
+	#img-grid {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+
+	#img-grid:first-images {
+		grid-column-start: 1;
+		grid-column-end: 3;
+	}
+
 	.active {
 		background-color: var(--yellow);
 		padding: 24px;
