--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,10 @@ p {
 	gap: 20px;
 }
 
+#about img {
+	width: 100px;
+}
+
 #about section h4 {
 	font-family: 'Montserrat';
 	font-size: 30px;
@@ -339,6 +343,26 @@ input[type=radio] {
 		border-radius: 8px;
 		margin-left: 20px;
 		margin-right: 20px;
+	}
+
+	#testimonials div {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 24px;
+		border-radius: 8px;
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+
+	#about div {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		text-align: center;
+		gap: 20px;
+	}
+
+	#about img {
+		width: 100px;
 	}
 }
 
