--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ p {
 
 #about section p {
 	font-family: 'Montserrat';
-	font-size: 20px;
+	font-size: 15px;
 	font-weight: 100;
 }
 
@@ -359,10 +359,12 @@ input[type=radio] {
 		grid-template-columns: 1fr 1fr 1fr 1fr;
 		text-align: center;
 		gap: 20px;
+		align-items: self-end;
 	}
 
 	#about img {
 		width: 100px;
+		height: 140px;
 	}
 }
 
