--- a/styles.css
+++ b/styles.css
@@ -311,6 +311,7 @@ input[type=radio] {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr 1fr;
 		gap: 24px;
+		width: 135%;
 	}
 
 	li {
@@ -337,7 +338,20 @@ input[type=radio] {
 	}
 
 	header {
+		display: grid;
+		grid-template-columns: 200px 400px;
+		grid-template-rows: 70px;
 		padding: 40px;
+	}
+
+	#menu-toggle {
+		display: grid;
+	}
+
+
+	p {
+		display: grid;
+		grid-column: 2 / 2;
 	}
 
 	.active {
