--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,94 @@ h3 {
 	margin-bottom: 20px;
 }
 
+/* -----MENU STYLES----- */
+
+#menu-toggle {
+	display: block;
+	position: relative;
+	top: 50px;
+	left: 50px;  
+	z-index: 1;  
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	 -ms-user-select: none;
+		 user-select: none;
+  }
+  
+  #menu-toggle li {
+	text-decoration: none;
+	color: #232323;
+	-webkit-transition: color 0.3s ease;
+	-o-transition: color 0.3s ease;
+	transition: color 0.3s ease;
+  }
+  
+  #menu-toggle input {
+	display: block;
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	top: -7px;
+	left: -5px;  
+	padding: 0;
+	cursor: pointer;  
+	opacity: 0; 
+	z-index: 2; 
+	-webkit-touch-callout: none;
+  }
+  
+  #menu-toggle label {
+	position: relative;
+	display: block;
+	width: 30px;
+	height: 30px;
+  }
+
+  #menu-toggle label {
+  display: block;
+  width: 30px;
+  height: 2px;
+  margin-bottom: 6px;
+  position: relative;
+  background: #cdcdcd;
+  border-radius: 3px;  
+  z-index: 1;  
+  -webkit-transform-origin: 4px 0px;  
+      -ms-transform-origin: 4px 0px;  
+          transform-origin: 4px 0px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+#menu-toggle label div:first-child {
+  -webkit-transform-origin: 0% 100%;
+      -ms-transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
+}
+
+#menu-toggle label div:nth-child(2) {
+    -webkit-transform-origin: 0% 0%;
+      -ms-transform-origin: 0% 0%;
+          transform-origin: 0% 0%;
+}
+
+
+ #menu-toggle input:checked + label div {
+  background: #232323;
+}
+
+
+#menu-toggle {
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #ededed;
+  list-style-type: none;
+}
+
 /* -----LINE STYLES----- */
 
 p {
