--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,53 @@ h3 {
 
 /* -----MENU STYLES----- */
 
+#menu-toggle {
+	display: block;
+	position: absolute;
+	top: 50px;
+	right: 50px;
+	z-index: 1;
+}
 
+#menu-toggle label {
+	background-color: var(--yellow);
+	padding: 25px 32px;
+	text-align: center;
+	position: absolute;
+	width: 90px;
+}
+
+#menu-toggle input {
+	display: block;
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	top: -7px;
+	left: -5px;  
+	padding: 0;
+	cursor: pointer;  
+	opacity: 0;
+	z-index: 2;
+}
+
+#menu-toggle ul {
+	position: absolute;
+	width: 300px;
+	margin: -100px 0 0 -50px;
+	padding: 50px;
+	padding-top: 125px;
+	background: #ededed;
+	list-style-type: none;
+	/* Hide the menu off-screen to the left */
+	top: -100%;
+	-webkit-transition: left 0.3s ease;
+	-o-transition: left 0.3s ease;
+	transition: left 0.3s ease; 
+  }
+
+#menu-toggle input:checked ~ ul {
+	top: 0;
+  }
 
 /* -----LINE STYLES----- */
 
