--- a/styles.css
+++ b/styles.css
@@ -513,10 +513,43 @@ input[type=radio] {
 
 	#plan div {
 		display: grid;
-		grid-template-columns: 1fr 1f 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
 		gap: 24px;
 		border-radius: 8px;
 		margin-left: 20px;
 		margin-right: 20px;
 	}
+
+	#testimonials div {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		gap: 24px;
+		border-radius: 8px;
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+
+	#testimonials section {
+		justify-items: center;
+		text-align: center;
+		padding: 0px 0px 10px 0px;
+	}
+
+	#testimonials section h4 {
+		font-family: 'Montserrat';
+		font-size: 20px;
+		font-weight: 600;
+		text-align: center;
+		margin-top: 10px;
+	}
+	
+	#testimonials section p {
+		font-size: 12px;
+	}
+	
+	#testimonials section q {
+		font-size: 10px;
+		font-style: italic;
+	}
+
 }
