--- a/styles.css
+++ b/styles.css
@@ -552,4 +552,17 @@ input[type=radio] {
 		font-style: italic;
 	}
 
+	#plan section h4 {
+		font-family: 'Montserrat';
+		font-size: 20px;
+		font-weight: 600;
+		text-align: center;
+		padding: 28px 0px 0px 0px;
+	}
+
+	#plan img {
+		width: 50%;
+		padding: 50px;
+	}
+
 }
