--- a/styles.css
+++ b/styles.css
@@ -562,7 +562,23 @@ input[type=radio] {
 
 	#plan img {
 		width: 50%;
-		padding: 50px;
+		padding: 0px 50px;
+	}
+
+	#about div {
+		padding: 0px 200px;
+	}
+
+	#plan section {
+		background: var(--teal);
+		padding: 20px;
+		border-radius: 8px;
+		border-color: var(--white);
+		border: 4px solid white;
+		display: grid;
+		justify-content: center;
+		gap: 20px;
+		height: 200px;
 	}
 
 }
