--- a/styles.css
+++ b/styles.css
@@ -487,7 +487,7 @@ footer a {
 
 	footer {
 		display: grid;
-		grid-template-rows: 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr;
 		text-align: center;
 		background: var(--light-gray);
 		padding: 10px;
